# dsa-code-tutor

./: .env  .gitignore  README.md  llm.py  main.py  pyproject.toml
backend/: main.py  schemas.py  tutor.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  languages.js  topics.js
frontend/src/components/: ChatPanel.jsx  CodeEditor.jsx  HintsPanel.jsx  LanguageSelector.jsx  Navbar.jsx  OutputPanel.jsx  ProblemDisplay.jsx  ProblemInput.jsx  ProblemRow.jsx  SolutionPanel.jsx
frontend/src/pages/: ProblemsPage.jsx  SolverPage.jsx
