[project]
name = "dsa-code-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.11.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-groq>=1.1.2",
]
